Fixed home image being too big

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -164,7 +164,7 @@
       max-width: 100%;
       max-height: 100%;
   
-      max-width: 30rem;
+      /* max-width: 30rem; */
     }
 
     .page-sub-title{
